# auto_thievia

./: .gitignore  Dockerfile  LEARNING_CLASS_SUMMARY.md  README.md  api_server.py  auto_thievia.code-workspace  demo_gis_mapper.py  demo_learning_models.py  demo_recovery_data.py  demo_suspect_data.py  demo_theft_data.py  docker-compose.yml  pyproject.toml  run_tests.py  setup.py
data/: sample_theft_data.csv
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/assets/css/: main.css
frontend/pages/: analysis.vue  index.vue  maps.vue
src/auto_thievia/: __init__.py  api.py  duckdb_persistence.py  gis_mapper.py  learning_models.py  recovery_data.py  suspect_data.py  theft_data.py
tests/: README_GIS_TESTS.md  __init__.py  conftest.py  conftest_gis.py  run_gis_tests.py  test_gis_mapper.py  test_learning_models.py  test_recovery_data.py  test_suspect_data.py  test_theft_data.py
